# Term-2048

./: README.md  hs-game.cabal
app/: Main.hs
